Fixes #820: Add horizontal scroll for skill metrics on home page (#850)

--- a/src/components/BrowseSkill/custom.css
+++ b/src/components/BrowseSkill/custom.css
@@ -17,3 +17,7 @@
     background-color: #555;
     opacity: 1.0;
  }
+
+div.scrolling-wrapper::-webkit-scrollbar {
+        display: none;
+}
